--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   http: ^0.13.4
   intl: ^0.17.0
   provider: ^6.0.3
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -25,8 +26,9 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  # - images/
+  assets:
+  - assets/images/product-placeholder.png
+
   fonts:
     - family: Lato
       fonts:
